# PatchSeqLoader

./: CMakeLists.txt  conanfile.py
.github/workflows/: build.yml
res/: BG_colors.csv  HMBA_BG_consensus_colors_all_levels.csv  SEAAD_colors.csv  failed_sweeps_bg.json  failed_sweeps_cortex.json  hodge_taxonomy.csv  met_loader_resources.qrc  stim_ontology_to_map.py  stimulus_code_map.csv
src/: CSVReader.cpp  CSVReader.h  CellLoader.cpp  ColorTaxonomy.cpp  ColorTaxonomy.h  DataFrame.cpp  DataFrame.h  FeatureNames.h  InputDialog.cpp  InputDialog.h  MatrixData.cpp  MatrixData.h  MatrixDataLoader.cpp  MatrixDataLoader.h  PatchSeqDataLoader.cpp  PatchSeqDataLoader.h  PatchSeqDataLoader.json  PatchSeqFilePaths.cpp  PatchSeqFilePaths.h  Taxonomy.cpp  Taxonomy.h
src/Electrophysiology/: Experiment.cpp  Experiment.h  FailedSweepDetector.cpp  FailedSweepDetector.h  NWBLoader.cpp  NWBLoader.h  Recording.h  SpikeDetector.cpp  SpikeDetector.h  SpikeExtractor.cpp  SpikeExtractor.h  StimulusCodeMap.h  SweepProcessing.cpp  SweepProcessing.h
src/Morphology/: CellLoader.cpp  SWCLoader.cpp  SWCLoader.h
